--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -1964,13 +1964,11 @@ links:
                                 type: string
                                 ext: true
                             actor_selector:
-                                desc: The substring that refers to the actor entity. All instances of this string will be replaced with the actor entity's UUID.
+                                desc: The substring that refers to the actor entity. All instances of this string will be replaced with the actor entity's UUID. Defaults to %a
                                 type: string
-                                default: \x25a
                             target_selector:
-                                desc: The substring that refers to the target entity. All instances of this string will be replaced with the target entity's UUID.
+                                desc: The substring that refers to the target entity. All instances of this string will be replaced with the target entity's UUID. Defaults to %t
                                 type: string
-                                default: \x25t
                             variables:
                                 desc: A variable declaration declaring variables used inside the command.
                                 link: variables
