--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -1966,9 +1966,11 @@ links:
                             actor_selector:
                                 desc: The substring that refers to the actor entity. All instances of this string will be replaced with the actor entity's UUID. Defaults to %a
                                 type: string
+                                default: '%a'
                             target_selector:
                                 desc: The substring that refers to the target entity. All instances of this string will be replaced with the target entity's UUID. Defaults to %t
                                 type: string
+                                default: '%t'
                             variables:
                                 desc: A variable declaration declaring variables used inside the command.
                                 link: variables
