--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -2828,14 +2828,14 @@ links:
                                 ext: true
                             command_hit_offset:
                                 desc: Determines the offset of the command specified in the command_at_hit field.
-                                link: math_number
+                                link: math_number_0
                             command_along_ray:
                                 desc: The command to execute for each step of the raycast.
                                 type: string
                                 ext: true
                             command_step:
                                 desc: Determines the size of the step of the raycast. Defaults to 1.
-                                link: math_number
+                                link: math_number_1
                             command_along_ray_only_on_hit:
                                 desc: Determines if the command specified in the command_along_ray field should be executed only if the raycast has hit a block/entity.
                                 type: boolean
